--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,123 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f3f1ed
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#name{
+  font-family: Helvetica;
+  font-size:150px;
+  font-weight:bold;
+  padding-bottom:24px;
+
+}
+
+#intro{
+    border-bottom: solid black 1px;
+}
+
+.pad{
+  padding-left:24px;
+  padding-right:24px;
+}
+
+.menu-item{
+  width:100%;
+  display:flex;
+  justify-content: space-between;
+  margin-right:16px;
+  margin-bottom:8px;
+}
+  
+
+.menu {
+  height: 100vh;
+  width:320px;
+  font-family: Helvetica;
+  font-size:16px;
+  padding-left:24px;
+  
+  padding-top:8px;
+}
+
+.container {
+  position: sticky;
+  top:5px;
+  display: inline-block;
+  align-self: flex-start;
+  border-right:solid 1px black;
+  height:100vh;
+  padding-right:16px;
+}
+
+.content {
+  margin-left:40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width:100%;
+  
+}
+
+.flex {
+  display:flex;
+}
+
+.option{
+  /* border:solid red 10px; */
+  width:100%;
+  margin: 0 auto;
+  text-align: center;
+  padding-top: 80px;
+  /* padding-bottom:80px; */
+}
+
+.title{
+  font-size: 96px;
+  font-family: 'Nanum Myeongjo', serif;
+  font-style:italic;
+  color:goldenrod;
+  /* padding-bottom: px; */
+
+}
+
+button{
+  margin:20px;
+  width:100px;
+}
+
+.proj{
+  padding-bottom:140px;
+}
+
+@media (max-width: 966px) {
+  .container {
+      display: none;
+  }
+
+  iframe {
+    height:300px;
+  }
+}
+
+.toggle{
+  text-align:right;
+  padding:16px;
+}
+
+.year{
+  border:1px solid black;
+  border-radius:200px;
+  padding:2px 4px;
+  width:36px;
+  height:16px;
+}
+
+#description {
+  width:50%;
 }
