--- a/src/index.css
+++ b/src/index.css
@@ -283,11 +283,21 @@ button{
     height:300px;
   }
 
-  #description {
+  #intro {
     width:100%;
+  }
+
+  #description {
+    width:80vw;
   }
   #name{
     font-size:72px;
+  }
+
+  .word {
+    width:85vw;
+    margin-left:auto;
+    margin-right:auto;
   }
   .title{
     font-size:36px;
